# scrow

./: .gitattributes  .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  index.html  input.css  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  gh-pages.yml
assets/: favicon.ico.br  logo-cccc2c8e4b4fc409.svg.br  manifest.json  manifest.json.br  scrow-02d83ffa1029f8fa.js  scrow-02d83ffa1029f8fa.js.br  scrow-0be33079c8b8768b.js  scrow-0be33079c8b8768b.js.br  scrow-0f36b8233b269c4a.js  scrow-0f36b8233b269c4a.js.br  scrow-34c267bbbf4d5e58.js  scrow-34c267bbbf4d5e58.js.br  scrow-372e9646076e1529.js  scrow-372e9646076e1529.js.br  scrow-3a601b1c67cc207e.js  scrow-3a601b1c67cc207e.js.br  scrow-3c555390b5732d95.js  scrow-3c555390b5732d95.js.br  scrow-3e70d51b4fe0b96b.js  scrow-3e70d51b4fe0b96b.js.br  scrow-4bdf357dc7c6b195.js  scrow-4bdf357dc7c6b195.js.br  scrow-4e6d46aaa89f05e7.js  scrow-4e6d46aaa89f05e7.js.br  scrow-5d28534022d6bb00.js  scrow-5d28534022d6bb00.js.br  scrow-7d0c8e4ef1f8721c.js  scrow-7d0c8e4ef1f8721c.js.br  scrow-81c1f7ffed33ee11.js  scrow-81c1f7ffed33ee11.js.br  scrow-91fb758c46c22867.js  scrow-91fb758c46c22867.js.br  scrow-a9b385e744884b7c.js  scrow-a9b385e744884b7c.js.br  scrow-addb5a918333d17e.js  scrow-addb5a918333d17e.js.br  scrow-c41d6bedf7d27e71.js  scrow-c41d6bedf7d27e71.js.br  scrow-daebdc5558c1e67f.js  scrow-daebdc5558c1e67f.js.br  (+70 more)
backend/: Cargo.toml  rust-toolchain.toml
backend/src/: lib.rs  miniscript.rs  network.rs  psbt.rs  scripts.rs  scripts_wasm.rs  sign.rs  tx.rs  util.rs  wasm_sign.rs
frontend/: .eslintrc.json  eslint.config.mjs  next.config.js  package-lock.json  package.json
frontend/src/: webpack.config.js
frontend/src/app/: layout.tsx  metadata.ts  page.tsx
frontend/src/app/broadcast/: page.tsx
frontend/src/app/escrows/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/join/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/sign/: page.tsx
frontend/src/app/utxos/: page.tsx
frontend/src/components/: sidebar.tsx  wasmProvider.tsx
frontend/src/config/: nav.ts
frontend/src/hooks/: useBitcoinPrice.ts
frontend/src/lib/: wasm.ts
frontend/src/pkg/: package.json  scrow_backend.d.ts  scrow_backend.js  scrow_backend_bg.wasm  scrow_backend_bg.wasm.d.ts
frontend/src/services/: bitcoin.ts  nostr.ts
frontend/src/types/: bitcoin.ts  wasm.ts
frontend/src/wasm/: scrow_wasm.ts
frontend/styles/: globals.css
src/: error.rs  esplora.rs  main.rs  network.rs  scripts.rs  sign.rs  tx.rs  util.rs  validation.rs
src/app/: layout.tsx
src/components/: broadcast.rs  buttons.rs  combine.rs  create.rs  footer.rs  home.rs  input.rs  mod.rs  navbar.rs  output.rs  settings.rs  sign.rs  spend.rs
styles/: globals.css
