[package]
name = "scrow"
version = "0.1.0"
edition = "2024"
authors = [
    "Jose Storopoli <jose@storopoli.com>",
    "Luis Schwab <luisschwab@protonmail.com>",
    "luca70d <lcgntj@protonmail.com>",
    "blessedux <blessedux@protonmail.com>",
]
license = "MIT"

[dependencies]
# NOTE: keep bitcoin and secp256k1 versions in sync.
bitcoin = { version = "0.32.5", default-features = false, features = [
    "std",
    "serde",
    "secp-recovery",
    "rand",
] }
secp256k1 = { version = "0.29.0", features = ["global-context"] }
nostr = "0.39.0"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.11"
dioxus = { version = "0.6.3", features = ["router"] }

[dev-dependencies]
corepc-node = { version = "0.5.0", features = ["28_0", "download"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[lints.rust]
unsafe_code = "forbid" # Forbid unsafe code

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
