[package]
name = "scrow"
version = "0.6.1"
edition = "2024"
authors = [
    "Jose Storopoli <jose@storopoli.com>",
    "Luis Schwab <luisschwab@protonmail.com>",
    "luca70d <lcgntj@protonmail.com>",
    "blessedux <blessedux@protonmail.com>",
]
license = "MIT"

[dependencies]
# NOTE: keep bitcoin and secp256k1 versions in sync.
bitcoin = { version = "0.32.8", default-features = false, features = [
    "std",
    "serde",
    "secp-recovery",
    "rand",
] }
secp256k1 = { version = "0.29.1", features = ["global-context"] }
nostr = "0.44.2"
thiserror = "2.0.11"
esplora-client = { version = "0.12.1", default-features = false, features = [
    "tokio",
    "async-https-rustls",
] }
dioxus = { version = "0.7.2", features = ["router"] }
# web-sys and wasm-bindgen-futures is to get clipboard interactivity in WASM
web-sys = { version = "0.3.83", default-features = false, features = [
    "Clipboard",
    "Window",
    "Navigator",
    "Permissions",
] }
wasm-bindgen-futures = { version = "0.4.56" }

[dev-dependencies]
corepc-node = { version = "0.10.1", features = ["29_0", "download"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["rt", "macros"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.unsafe_code = "forbid"
rust.missing_docs = "warn"
rustdoc.all = "warn"

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
