[package]
name = "scrow-backend"
version = "0.1.0"
edition = "2021"
authors = [
    "Jose Storopoli <jose@storopoli.com>",
    "Luis Schwab <luisschwab@protonmail.com>",
    "luca70d <lcgntj@protonmail.com>",
    "blessedux <blessedux@protonmail.com>"
]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcoin = { version = "0.32.5", default-features = false, features = ["std", "serde", "secp-recovery", "rand"] }
miniscript = { version = "12.3.0", default-features = false, features = ["std", "rand", "serde"] }
wasm-bindgen = "0.2.100"
serde = { version = "1.0.218", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.12.12", features = ["json"] }
url = "2.5.4"
serde_json = "1.0.139"
wasm-bindgen-futures = "0.4.50"
tokio = "1.43.0"
web-sys = { version = "0.3.77", features = ["console"] }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["test-util", "macros", "rt"] }
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
